--- a/css/styles.css
+++ b/css/styles.css
@@ -9,9 +9,12 @@ h1
 {
 	margin-bottom: 36px;
 }
-h1, h2, h3, p, li
+h1
 {
-	font-family: Segoe UI, sans-serif;
+	font-family: electrolize, sans-serif; color:#1C68A9; 
+h2, h3, p, li
+{
+	font-family: calibri, sans-serif;
 	text-align: center;
 	color: #777777;
 	font-size: 24px;
