--- a/css/styles.css
+++ b/css/styles.css
@@ -11,11 +11,11 @@ h1
 }
 h1
 {
-	font-family: "electrolize", sans-serif; color:#1C68A9;
+	font-family: electrolize, sans-serif; color:#1C68A9;
 }
 h2, h3, p, li
 {
-	font-family: "calibri", sans-serif;
+	font-family: calibri, sans-serif;
 	text-align: center;
 	color: #777777;
 	font-size: 24px;
@@ -152,7 +152,7 @@ main
 {	
 	height: 36px;
 	width: 864px;
-	font-family: "Segoe UI", sans-serif;
+	font-family: Segoe UI, sans-serif;
 	text-align: center;
 	color: #777777;
 	font-size: 24px;
