--- a/css/styles.css
+++ b/css/styles.css
@@ -9,13 +9,9 @@ h1
 {
 	margin-bottom: 36px;
 }
-h1
+h1, h2, h3, p, li
 {
-	font-family: electrolize, sans-serif; color:#1C68A9;
-}
-h2, h3, p, li
-{
-	font-family: calibri, sans-serif;
+	font-family: Segoe UI, sans-serif;
 	text-align: center;
 	color: #777777;
 	font-size: 24px;
